Refactor DTOs to use Java records and add @Transactional annotations to service classes